# AutoToolchain

./: .gitignore  README.md  build.bat
Projects_2025/: CMakeLists.txt
Projects_2025/Journey/: CMakeLists.txt  journey.bat
Projects_2025/MergeSort/: CMakeLists.txt  merge_sort.bat
Projects_2025/MergeSort/src/: CMakeLists.txt  merge_sort.bat
Projects_2025/MergeSort/test/: test_merge.cpp
build_ninja/: .ninja_deps  .ninja_log  build.ninja
